--- a/package.json
+++ b/package.json
@@ -19,4 +19,14 @@
     "pg": "^8.16.0",
     "zod": "^3.25.28"
   }
+},
+{
+  $jsonMinimo = @"
+{
+  "title": "Película de prueba 1234567890",
+  "description": "Descripción de prueba que cumple con el mínimo",
+  "release_year": 2023,
+  "language_id": 1
+}
+"@
 }
